--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,6 @@ dependencies {
 
     def lottieVersion = "3.5.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
