--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -60,10 +63,32 @@ dependencies {
     // CircleIndicator
     implementation 'me.relex:circleindicator:2.1.6'
 
-    implementation 'com.caverock:androidsvg:1.2.1'
-
+    //Lottie animate
     def lottieVersion = "3.5.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
+    //Swipe refresh
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    //lib coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+
+
+    //noinspection GradleDependency
+    implementation "androidx.room:room-runtime:2.2.5"
+    //noinspection GradleDependency
+    kapt "androidx.room:room-compiler:2.2.5"
+    //noinspection GradleDependency
+    implementation "androidx.room:room-ktx:2.2.5"
+
+    //datastore preferences
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "androidx.datastore:datastore-preferences-core:1.0.0"
+
+    //Firebase
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
+
 }
