--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,116 +2,85 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.CrossCurrencyTransfer"
         tools:targetApi="31">
         <activity
-            android:name=".features.auth.lupapassword.LupaPasswordActivityPw"
+            android:name=".features.metodetransfer.internasional.PasscoddeActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity
+            android:name=".features.auth.lupapassword.LupaPasswordActivityPw"
+            android:exported="false" />
         <activity
             android:name=".features.splashscreen.SplashActivity"
-            android:exported="true">
-
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".features.metodetransfer.lokal.LokalTransferActivity"
-            android:exported="false">
-
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-
-        </activity>
-
-        <activity
-            android:name=".features.metodetransfer.internasional.InternationalTransferActivity"
-            android:exported="true">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".features.auth.datadiri.DataDiriActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".features.auth.verifikasi.VerifikasiActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".features.auth.register.RegisterActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".features.home.HomeBottomActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
         </activity>
+
+        <activity
+            android:name=".features.metodetransfer.lokal.LokalTransferActivity"
+            android:exported="false" />
+        <activity
+            android:name=".features.metodetransfer.internasional.InternationalTransferActivity"
+            android:exported="true" />
+        <activity
+            android:name=".features.metodetransfer.internasional.BankInternationalActivity"
+            android:exported="true" />
+        <activity
+            android:name=".features.metodetransfer.internasional.PembayaranTransferActivity"
+            android:exported="true" />
+        <activity
+            android:name=".features.metodetransfer.internasional.PengirimTransferActivity"
+            android:exported="true"/>
+
+        <activity
+            android:name=".features.metodetransfer.internasional.SuksesTransferActivity"
+            android:exported="true" />
+        <activity
+            android:name=".features.auth.datadiri.DataDiriActivity"
+            android:exported="false" />
+        <activity
+            android:name=".features.auth.verifikasi.VerifikasiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".features.auth.register.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".features.home.HomeBottomActivity"
+            android:exported="true" />
         <activity
             android:name=".features.auth.lupapassword.LupaPasswordActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".features.auth.login.LoginActivity"
-            android:exported="true">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".features.auth.login.PinActivity"
-            android:exported="true">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+            android:exported="true" />
+
         <activity
             android:name=".features.onboarding.ViewpagerActivity"
-            android:exported="true">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
