add fireauth, validasi transfer, sqlite pin

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,16 +26,22 @@
             android:exported="false" />
         <activity
             android:name=".features.splashscreen.SplashActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"/>
 
         <activity
             android:name=".features.metodetransfer.lokal.LokalTransferActivity"
+            android:exported="false" />
+        <activity
+            android:name=".features.metodetransfer.lokal.BankLokalActivity"
+            android:exported="false" />
+        <activity
+            android:name=".features.metodetransfer.lokal.PembayaranTransferLokalActivity"
+            android:exported="false" />
+        <activity
+            android:name=".features.metodetransfer.lokal.PengirimTransferLokalActivity"
+            android:exported="false" />
+        <activity
+            android:name=".features.metodetransfer.lokal.SuksesTransferLokalActivity"
             android:exported="false" />
         <activity
             android:name=".features.metodetransfer.internasional.InternationalTransferActivity"
@@ -64,7 +70,15 @@
             android:exported="false" />
         <activity
             android:name=".features.home.HomeBottomActivity"
-            android:exported="true" />
+            android:exported="true" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".features.auth.lupapassword.LupaPasswordActivity"
             android:exported="false" />
