--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,6 @@
         <activity
             android:name=".features.splashscreen.SplashActivity"
             android:exported="true"/>
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
 
         <activity
             android:name=".features.metodetransfer.lokal.LokalTransferActivity"
@@ -69,9 +63,15 @@
             android:exported="false" />
         <activity
             android:name=".features.home.HomeBottomActivity"
+            android:exported="true" >
 
-            android:exported="true" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".features.auth.lupapassword.LupaPasswordActivity"
             android:exported="false" />
