--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,11 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id 'com.google.gms.google-services'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -72,6 +74,7 @@ dependencies {
 
     //lib coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
 
     //noinspection GradleDependency
     implementation "androidx.room:room-runtime:2.2.5"
@@ -81,8 +84,13 @@ dependencies {
     implementation "androidx.room:room-ktx:2.2.5"
 
     //datastore preferences
+    implementation 'androidx.datastore:datastore-core:1.0.0'
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "androidx.datastore:datastore-preferences-core:1.0.0"
+    //hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
 
     //Firebase
     implementation 'com.google.firebase:firebase-firestore-ktx:24.4.0'
@@ -97,5 +105,12 @@ dependencies {
     //Moshi
     implementation "com.squareup.moshi:moshi:1.14.0"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.14.0"
+
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    //biometric
+    implementation 'androidx.biometric:biometric:1.0.1'
+
+    implementation 'com.google.android.libraries.places:places:2.6.0'
 
 }
