--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
-    <uses-permission android:name="android.webkit.PermissionRequest" />
+        android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -22,12 +23,32 @@
         android:theme="@style/Theme.CrossCurrencyTransfer"
         tools:targetApi="31">
         <activity
+            android:name=".features.profile.EditProfileActivity"
+            android:exported="false">
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".features.profile.DetailProfileActivity"
+            android:exported="true" >
+        </activity>
+
+        <activity
+            android:name=".features.maps.MapsActivity"
+            android:exported="false" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="API-KEY" />
+
+        <activity
             android:name=".features.auth.lupapassword.LupaPasswordActivityPw"
             android:exported="false" />
         <activity
             android:name=".features.splashscreen.SplashActivity"
-            android:exported="true"/>
-
+            android:exported="true" />
         <activity
             android:name=".features.metodetransfer.lokal.LokalTransferActivity"
             android:exported="false" />
@@ -54,21 +75,18 @@
             android:exported="true" />
         <activity
             android:name=".features.metodetransfer.internasional.PengirimTransferActivity"
-            android:exported="true"/>
-
+            android:exported="true" />
         <activity
             android:name=".features.metodetransfer.internasional.SuksesTransferActivity"
             android:exported="true" />
         <activity
             android:name=".features.auth.datadiri.DataDiriActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".features.auth.verifikasi.VerifikasiActivity"
@@ -78,8 +96,10 @@
             android:exported="false" />
         <activity
             android:name=".features.home.HomeBottomActivity"
-            android:exported="true" />
+            android:exported="true">
 
+
+        </activity>
         <activity
             android:name=".features.auth.lupapassword.LupaPasswordActivity"
             android:exported="false" />
@@ -89,7 +109,6 @@
         <activity
             android:name=".features.auth.login.PinActivity"
             android:exported="true" />
-
         <activity
             android:name=".features.onboarding.ViewpagerActivity"
             android:exported="true" />
