--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,28 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+    // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
     }
 }
+buildscript {
+    ext {
+         compose_version = '1.1.1'
+     }
+}
+buildscript {
+
+    ext.hilt_version = '2.42'
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+        }
+    }
 
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
 }
 
 task clean(type: Delete) {
