--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,4 +113,7 @@ dependencies {
 
     implementation 'com.google.android.libraries.places:places:2.6.0'
 
+    //Work Manager
+    implementation("androidx.work:work-runtime-ktx:2.7.1")
+
 }
