Berhasil post transaksi pake mock api

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,19 +85,18 @@
         </activity>
         <activity
             android:name=".features.auth.verifikasi.VerifikasiActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"/>
         <activity
             android:name=".features.auth.register.RegisterActivity"
             android:exported="false" />
         <activity
             android:name=".features.home.HomeBottomActivity"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".features.auth.lupapassword.LupaPasswordActivity"
