--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,8 @@ dependencies {
     kapt "androidx.room:room-compiler:2.2.5"
     //noinspection GradleDependency
     implementation "androidx.room:room-ktx:2.2.5"
+    //noinspection GradleDependency
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
 
     //datastore preferences
     implementation 'androidx.datastore:datastore-core:1.0.0'
