--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,10 +80,10 @@
         <activity
             android:name=".features.metodetransfer.internasional.SuksesTransferActivity"
             android:exported="true" />
-        <activity
-            android:name=".features.auth.datadiri.DataDiriActivity"
-            android:exported="true">
-        </activity>
+<!--        <activity-->
+<!--            android:name=".features.auth.datadiri.DataDiriActivity"-->
+<!--            android:exported="true">-->
+<!--        </activity>-->
         <activity
             android:name=".features.auth.verifikasi.VerifikasiActivity"
             android:exported="true"/>
@@ -93,18 +93,19 @@
         <activity
             android:name=".features.home.HomeBottomActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".features.auth.lupapassword.LupaPasswordActivity"
             android:exported="false" />
         <activity
             android:name=".features.auth.login.LoginActivity"
-            android:exported="true" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".features.auth.login.PinActivity"
             android:exported="true" />
