--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,24 +17,29 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_logo"
-        android:usesCleartextTraffic="true"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.CrossCurrencyTransfer"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".features.profile.EditProfileActivity"
-            android:exported="false">
+            android:name=".features.home.fragment.history.CobaHistoryActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+
+        <activity
+            android:name=".features.profile.EditProfileActivity"
+            android:exported="false"/>
+
         <activity
             android:name=".features.profile.DetailProfileActivity"
-            android:exported="true" >
-        </activity>
+            android:exported="true"/>
 
         <activity
             android:name=".features.maps.MapsActivity"
@@ -82,22 +87,16 @@
             android:exported="true" />
         <activity
             android:name=".features.auth.datadiri.DataDiriActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"/>
         <activity
             android:name=".features.auth.verifikasi.VerifikasiActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".features.auth.register.RegisterActivity"
             android:exported="false" />
         <activity
             android:name=".features.home.HomeBottomActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".features.auth.lupapassword.LupaPasswordActivity"
