--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    packagingOptions {
+        resources.excludes.add("META-INF/*")
+    }
 }
 
 dependencies {
@@ -105,9 +109,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
 
-        //Moshi
-        implementation "com.squareup.moshi:moshi:1.14.0"
-        kapt "com.squareup.moshi:moshi-kotlin-codegen:1.14.0"
+    //Moshi
+    implementation "com.squareup.moshi:moshi:1.14.0"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.14.0"
 
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
