--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     //static circle image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //library ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     // CircleIndicator
     implementation 'me.relex:circleindicator:2.1.6'
 
